# contour

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml  setup.py
cmake/: dotnet.cmake
contour/: CMakeLists.txt  addpaths.py  capture.cpp  config.h.in  conrec.c  conrec.h  contour.cpp  contour.hpp  contour_capi.cpp  contour_capi.h  contour_test.py  numpy.i  scratch.cpp  setup.py  swig_contour.i
dotnet/: Contour.cs  Contour.csproj.in
dotnettest/: ContourTest.cs
