[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "swig_contour"
version = "1.0.0"
description = "Contour line generation library"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]
